# newnlii_web_server

./: .env  DEPLOY.md  HOW_TO_ACCESS.md  PORT_FORWARDING_TROUBLESHOOTING.md  alembic.ini  categories.json  chat-api.bat  chat-user-1.bat  chat-user-2.bat  check_server_address.bat  diagnose_port_forwarding.bat  insert_specializations_and_skills.sql  logs.sh  newnlii.db  requirements.txt  run.bat  run_prod.sh  run_production.bat  run_production.sh
alembic/: env.py
alembic/versions/: 0dc76d47a359_portfolio.py  1374275ed115_add_portfolio.py  16dbdd68f023_user_updated_2.py  348bdddb6eb1_create_favorites_table.py  36e80703dbc5_add_comments.py  3f090bc33f3d_lazy_category.py  416ca8ebf5ae_update_order.py  4612c973c483_delete_relationship.py  46d288e0d541_orders.py  4a4fee718007_indexes.py  4fb36f4bfa64_new_message_col.py  513d676e9e91_orders_delete_status.py  51506d618c0e_user_was_updated.py  53cffb517779_new.py  5b0fa37dd266_update_user.py  5c37b50d462b_add_new_field.py  674d65e4ca3b_update_project.py  6a5687fa6529_tags_was_added.py  6bc9290f0b95_user_updated.py  78e8f3e427c7_create_user_saved_posts.py  7f6094fb3246_new_columns_messages.py  b1e372bfbf88_new_migration.py  (+10 more)
app/: __init__.py  crypto.py  encoders.py  main.py  redis_client.py
chat-api/: .gitignore  README.md  chat.db  requirements.txt  run.bat  run.sh  test.db  test_client.py
kernel_cpp/: CMakeLists.txt  Makefile  README.md  main.cpp  run.bat
kernel_cpp/kernel/: kernel.cpp  kernel.h
systemd/: README.md  devsy-chat-server.service  devsy-web-server.service  troubleshoot_service.sh
tests/: chat.py  index.py
(+131 files in other folders)
